// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Description/Description Children 1`] = `
<dl
  className="description-list--single description-list"
>
  <dt
    className="description-list__description description-list__term description-list__term--multi"
  >
    Term
  </dt>
  <dd
    className="description-list__description description-list__description description-list__description--multi"
  >
    <div>
      Its description
    </div>
  </dd>
  <dd
    className="description-list__description description-list__description description-list__description--multi"
  >
    <div>
      Its second description
    </div>
  </dd>
</dl>
`;

exports[`Storyshots Description/Description Description 1`] = `
<dl
  className="description-list--single description-list"
>
  <dt
    className="description-list__description description-list__term description-list__term--single"
    description="Its Description"
  >
    Term
  </dt>
  <dd
    className="description-list__description description-list__description description-list__description--single"
    description="Its Description"
  >
    Its Description
  </dd>
</dl>
`;

exports[`Storyshots Description/Description Multiple Descriptions 1`] = `
<dl
  className="description-list--single description-list"
>
  <dt
    className="description-list__description description-list__term description-list__term--multi"
    description={
      Array [
        <div>
          Its description
        </div>,
        <div>
          Its second description
        </div>,
      ]
    }
  >
    Term
  </dt>
  <dd
    className="description-list__description description-list__description description-list__description--multi"
    description={
      Array [
        <div>
          Its description
        </div>,
        <div>
          Its second description
        </div>,
      ]
    }
  >
    <div>
      Its description
    </div>
  </dd>
  <dd
    className="description-list__description description-list__description description-list__description--multi"
    description={
      Array [
        <div>
          Its description
        </div>,
        <div>
          Its second description
        </div>,
      ]
    }
  >
    <div>
      Its second description
    </div>
  </dd>
</dl>
`;

exports[`Storyshots Description/Description With Date 1`] = `
<dl
  className="description-list--single description-list"
>
  <dt
    className="description-list__description description-list__term description-list__term--single"
    description={2021-01-01T00:00:00.000Z}
  >
    Created At
  </dt>
  <dd
    className="description-list__description description-list__description description-list__description--single"
    description={2021-01-01T00:00:00.000Z}
  >
    <time
      dateTime={"2021-01-01T00:00:00.000Z"}
      title="2021-01-01T00:00:00+00:00"
    >
      January 1, 2021
    </time>
  </dd>
</dl>
`;

exports[`Storyshots Description/Description With Date As Child 1`] = `
<dl
  className="description-list--single description-list"
>
  <dt
    className="description-list__description description-list__term description-list__term--single"
  >
    Created At
  </dt>
  <dd
    className="description-list__description description-list__description description-list__description--single"
  >
    <time
      dateTime={"2021-01-01T00:00:00.000Z"}
      title="2021-01-01T00:00:00+00:00"
    >
      January 1, 2021
    </time>
  </dd>
</dl>
`;
